--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      font-size: 1.1em; /* Increase the base font size */
     }
     h1, h2 {
       text-align: center;
@@ -53,7 +54,8 @@
       border-radius: 1px;
       transition: transform 0.2s, box-shadow 0.2s;
       color: white;  /* Ensure text is visible */
-      font-size: 1.2em;  /* Adjust font size as needed */
+      font-size: 1.4em;  /* Base font size for larger screens */
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);  /* Add text shadow for better visibility */
     }
     .color-bar:hover {
       transform: scale(1.05);
@@ -76,11 +78,13 @@
       }
       .color-bar {
         height: 60px;  /* Slightly smaller on devices with less vertical space */
+        font-size: 1.2em;  /* Adjust font size for smaller vertical space */
       }
     }
     @media (max-width: 600px) {
       .color-bar {
         height: 80px;  /* Adjust height for smaller screens */
+        font-size: 1.1em;  /* Adjust font size for smaller screens */
       }
     }
   </style>
