--- a/index.html
+++ b/index.html
@@ -2,115 +2,78 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Identify Your Emotion</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Emotion App</title>
   <style>
-    html, body {
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
       margin: 0;
       padding: 0;
-      height: 100%;
+      background-color: #fff;
     }
-    body {
-      font-family: 'Roboto', sans-serif;
-      background-color: #f7f7f7;
-      color: #333;
-      padding: 5px;
+    header {
+      padding: 20px;
+      background-color: #f0f0f0;
+      margin-bottom: 30px;
+    }
+    .emotion-pairs {
       display: flex;
-      flex-direction: column;
-      align-items: center;
+      flex-wrap: wrap;
       justify-content: center;
-      font-size: 1.1em; /* Increase the base font size */
+      gap: 30px;
+      margin-bottom: 40px;
     }
-    h1, h2 {
-      text-align: center;
-      margin: 0.3em 0;
-    }
-    hr {
-      margin: 0.3em 0;
-      width: 100%;
-      max-width: 400px;
-    }
-    .emotion-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 0.8em;
-      width: 100%;
-    }
-    .emotion-range {
-      text-align: center;
-      width: 100%;
-      max-width: 300px;
-    }
-    .color-bar {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 100%;
-      height: 100px;  /* Increased height for a thicker bar */
-      margin-top: 0.3em;
+    .emotion-pair {
       text-decoration: none;
-      border-radius: 1px;
-      transition: transform 0.2s, box-shadow 0.2s;
-      color: white;  /* Ensure text is visible */
-      font-size: 1.4em;  /* Base font size for larger screens */
-      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);  /* Add text shadow for better visibility */
+      color: inherit;
+      cursor: pointer;
+      width: 200px;
     }
-    .color-bar:hover {
-      transform: scale(1.05);
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+    .emotion-text {
+      font-size: 24px;
+      display: block;
+      margin-bottom: 5px;
     }
-    .bar-fear { background: linear-gradient(to right, #000000, #5e7480, #cce0ff); }
-    .bar-anger { background: linear-gradient(to right, #ff0000, #ffaaaa, #ffffff); }
-    .bar-sad { background: linear-gradient(to right, #808080, #ffff99, #ffff00); }
-    .bar-bad { background: linear-gradient(to right, #002b4d, #8fc286, #cceeb4); }
-    .bar-hate { background: linear-gradient(to right, #800080, #dd99dd, #ffc0cb); }
-    @media (max-height: 700px) {
-      body {
-        padding: 5px;
-      }
-      h1, h2 {
-        margin: 0.2em 0;
-      }
-      hr {
-        margin: 0.2em 0;
-      }
-      .color-bar {
-        height: 60px;  /* Slightly smaller on devices with less vertical space */
-        font-size: 1.2em;  /* Adjust font size for smaller vertical space */
-      }
+    .color-band {
+      height: 2px;
+      background-color: #333;
+      transition: background-color 0.3s;
     }
-    @media (max-width: 600px) {
-      .color-bar {
-        height: 80px;  /* Adjust height for smaller screens */
-        font-size: 1.1em;  /* Adjust font size for smaller screens */
-      }
+    .emotion-pair:hover .color-band {
+      background-color: #555;
     }
   </style>
 </head>
 <body>
-  <h1>Identify Your Emotion</h1>
-  <hr>
-  <h2>Select one of the 5 emotional ranges:</h2>
-  <div id="emotion-container" class="emotion-container">
-    <!-- Emotion cards will be generated here -->
-  </div>
-  <script>
-    fetch('emotions.json')
-      .then(response => response.json())
-      .then(data => {
-        const container = document.getElementById('emotion-container');
-        data.emotions.forEach(emotion => {
-          const a = document.createElement('a');
-          a.href = emotion.id + '.html'; // e.g., fear-caution-trust.html
-          a.className = 'color-bar ' + emotion.colorClass;
-          a.textContent = emotion.range;  // Move text inside the color bar
-          
-          container.appendChild(a);
-        });
-      })
-      .catch(error => console.error('Error loading JSON data:', error));
-  </script>
+  <header>
+    <h1>Emotion App</h1>
+  </header>
+  <main>
+    <div class="emotion-pairs">
+      <!-- Example emotion pair: Fear <--> Trust -->
+      <a href="FearTrust.html" class="emotion-pair">
+        <span class="emotion-text">Fear &#x2194; Trust</span>
+        <div class="color-band"></div>
+      </a>
+      <!-- Additional emotion pairs (you can create corresponding subpages using text from your CSV file) -->
+      <a href="AngerJoy.html" class="emotion-pair">
+        <span class="emotion-text">Anger &#x2194; Joy</span>
+        <div class="color-band"></div>
+      </a>
+      <a href="SadHappy.html" class="emotion-pair">
+        <span class="emotion-text">Surprise &#x2194; Anticipation</span>
+        <div class="color-band"></div>
+      </a>
+      <a href="BadGood.html" class="emotion-pair">
+        <span class="emotion-text">Sadness &#x2194; Disgust</span>
+        <div class="color-band"></div>
+      </a>
+      <a href="HateLove.html" class="emotion-pair">
+        <span class="emotion-text">Acceptance &#x2194; Contempt</span>
+        <div class="color-band"></div>
+      </a>
+    </div>
+  </main>
 </body>
 </html>
