--- a/index.html
+++ b/index.html
@@ -66,38 +66,34 @@
 </head>
 <body>
   <header>
-    <h1>Emotion App</h1>
+    <h1>Emotion Identifyer</h1>
   </header>
   <main>
+    <p>Select an emotional range.</p>
     <div class="emotion-pairs">
-      <!-- Emotion Pair: Fear ↔ Trust -->
       <a href="FearTrust.html" class="emotion-pair">
         <div class="content">
           <span class="emotion-text">Fear &#x2194; Trust</span>
         </div>
       </a>
-      <!-- Emotion Pair: Anger ↔ Joy -->
-      <a href="AngerJoy.html" class="emotion-pair">
+      <a href="AngerZen.html" class="emotion-pair">
         <div class="content">
-          <span class="emotion-text">Anger &#x2194; Joy</span>
+          <span class="emotion-text">Anger &#x2194; Zen</span>
         </div>
       </a>
-      <!-- Emotion Pair: Surprise ↔ Anticipation -->
       <a href="SadHappy.html" class="emotion-pair">
         <div class="content">
-          <span class="emotion-text">Surprise &#x2194; Anticipation</span>
+          <span class="emotion-text">Sad &#x2194; Happy</span>
         </div>
       </a>
-      <!-- Emotion Pair: Sadness ↔ Disgust -->
       <a href="BadGood.html" class="emotion-pair">
         <div class="content">
-          <span class="emotion-text">Sadness &#x2194; Disgust</span>
+          <span class="emotion-text">Good &#x2194; Bad</span>
         </div>
       </a>
-      <!-- Emotion Pair: Acceptance ↔ Contempt -->
       <a href="HateLove.html" class="emotion-pair">
         <div class="content">
-          <span class="emotion-text">Acceptance &#x2194; Contempt</span>
+          <span class="emotion-text">Hate &#x2194; Love</span>
         </div>
       </a>
     </div>
