Color, Understanding, new Descriptions

--- a/AngerZen.html
+++ b/AngerZen.html
@@ -30,17 +30,21 @@
 </head>
 <body>
   <header>
-    <h1>Anger vs Joy</h1>
+    <h1>Anger - Zen</h1>
   </header>
   <div class="content">
     <a href="index.html" class="back-link">&#8592; Back to Home</a>
-    <h2>About This Emotion Pair</h2>
+    <h2>Description</h2>
     <p>
-      Anger represents an intense emotional response emerging from perceived injustice or frustration, often acting as a catalyst for change when channeled appropriately. In contrast, Joy embodies the experience of happiness and fulfillment derived from positive experiences and meaningful connections. Together, they highlight the dual capacity of human emotions to both challenge and celebrate life’s moments.
+      This range spans from intense anger, rage, and frustration, passing through irritation and neutrality, progressing toward acceptance, tranquility, and ultimately achieving a state of inner peace and clarity (Satori or Zen).
     </p>
-    <h3>Insights</h3>
+    <h2>Understanding</h2>
     <p>
-      Balancing anger and joy involves transforming intense feelings into constructive action while embracing the positive energy that fuels personal growth and well-being.
+      Feelings of resentment, agitation, or hostility place you towards the Anger end of this emotional range, signaling unmet needs or personal boundaries. Understanding these emotions helps you identify their triggers and work through them constructively. When your emotional state becomes reflective, accepting, and serene, you are approaching Satori, demonstrating emotional maturity and a balanced inner state.
+    </p>
+    <h2>Range of Emotions</h2>
+    <p>
+      Rage, Enraged, Fury, Furious, Infuriated, Livid, Incensed, Hateful, Hostility, Hostile, Aggressive, Violated, Threatened, Snapped, Provoked, Bitter, Resentful, Indignant, Offended, Devastated, Crushed, Hurt, Insulted, Slighted, Exposed, Embarrassed, Jealous, Mad, Anger, Frustrated, Frustration, Irritated, Irritation, Annoyed, Annoyance, Riled, Concerned, Suspicious, Skeptical, Critical, Sarcastic, Scolding, Contentious, Withdrawn, Standoffish, Distant, Vulnerable, Hesitant, Reserved, Pensive, Thoughtful, Accepting, Neutral, Grounded, Centered, Reflection, Open-minded, Receptive, Understanding, Patient, Tolerant, Tolerance, Balanced, Harmonious, Tranquil, Calm, Peaceful, Peace, Serene, Serenity, Present, Equanimous, Zen.
     </p>
   </div>
 </body>
