--- a/BadGood.html
+++ b/BadGood.html
@@ -34,12 +34,15 @@
   </header>
   <div class="content">
     <a href="index.html" class="back-link">&#8592; Back to Home</a>
-    <h2>About This Emotion Pair</h2>
+    <h2>Description</h2>
     <p>
-        Emotions at the Bad end of this range include Loathing, Revolted, and Awful to Timid, Pessimistic, and Hope in the middle, to Releaf, Satisfaction, and Grateful at the Good end of the range.
+      This range covers feelings from intense negativity, disgust, and dissatisfaction, through neutral states of tolerance and acceptance, moving towards optimism, satisfaction, appreciation, and an uplifting sense of gratitude.
     </p>
-    <h3>This range of emotions:</h3>
+    <h2>Understanding</h2>
     <p>
+      Emotions of aversion, dissatisfaction, or pessimism suggest you're towards the Bad end, prompting reflection on current circumstances or interactions that trigger negativity. Awareness of these feelings encourages positive change. If you feel hopeful, appreciative, and inspired, you're experiencing emotions closer to the Good end, revealing alignment with your values and positive outcomes.
+    </p>
+    <h2>Range of Emotions</h2>
         Loathing, Detestable, Abhorrent, Repugnant, Revolted, Revulsion, Disgust, Disgusted, Contempt, Judgmental, Awful, Disapproval, Disappointed, Disillusioned, Aversion, Avoidant, Hesitant, Hesitation, Timid, Doubt, Pessimism, Neutral, Tolerance, Open-minded, Acceptance, Hope, Encouraging, Optimism, Positivity, Relief, Satisfaction, Appreciation, Goodness, Gratitude, Fulfilled, Inspired, Uplifted.
     </p>
   </div>
