--- a/FearTrust.html
+++ b/FearTrust.html
@@ -34,11 +34,14 @@
   </header>
   <div class="content">
     <a href="index.html" class="back-link">&#8592; Back to Home</a>
-    <h2>About This Emotion Pair</h2>
+    <h2>Description</h2>
     <p>
-      Emotions at the Fear end of this range include Terror, Panicked, Terrified to Nervous, Apprehensive, and Anxious in the middle, to Passive, Confident, and Safe towards the Trust end of the range.
+x
     </p>
-    <h3>This range of emotions:</h3>
+    <h2>Understanding</h2>
+    <p>
+x
+    <h2>Range of Emotions</h2>
     <p>
         Terror, Panicked, Terrified, Dread, Frightened, Scared, Overwhelmed, Distressed, Fear, Worried, Tense, Uneasy, Unease, Nervous, Nervousness, Apprehensive, Apprehension, Anxious, Anxiety, Rejected, Jilted, Alienated, Inadequate, Inferior, Insecure, Unsure, Insignificant, Submissive, Passive, Inert, Caution, Neutral, Confidence, Calm, Assurance, Safety, Trust, Faith
     </p>
