--- a/SadHappy.html
+++ b/SadHappy.html
@@ -34,11 +34,15 @@
   </header>
   <div class="content">
     <a href="index.html" class="back-link">&#8592; Back to Home</a>
-    <h2>About This Emotion Pair</h2>
+    <h2>Description</h2>
     <p>
-        Emotions at the Anger end of this range include Rage, Furious, and Hate to Withdrawn, Hesitant and Neutral in the middle, to Balanced, Tranquil and Peaceful towards the Zen end of the range.
+      This emotional spectrum moves from profound sadness, despair, and hopelessness, through feelings of resignation, neutrality, and contentment, towards an expansive sense of happiness, joy, and fulfillment.
     </p>
-    <h3>This range of emotions:</h3>
+    <h2>Understanding</h2>
+    <p>
+      If you're experiencing sorrow, loneliness, or emotional pain, you're positioned near the Sad end of this range, highlighting needs for comfort and emotional support. Recognizing and addressing these feelings facilitates emotional healing. Experiencing contentment, joy, or excitement indicates you're towards the Happy end, reflecting emotional satisfaction and positivity in your life.
+    </p>
+    <h2>Range of Emotions</h2>
     <p>
         Rage, Enraged, Fury, Furious, Infuriated, Livid, Incensed, Hateful, Hostility, Hostile, Aggressive, Violated, Threatened, Snapped, Provoked, Bitter, Resentful, Indignant, Offended, Devastated, Crushed, Hurt, Insulted, Slighted, Exposed, Embarrassed, Jealous, Mad, Anger, Frustrated, Frustration, Irritated, Irritation, Annoyed, Annoyance, Riled, Concerned, Suspicious, Skeptical, Critical, Sarcastic, Scolding, Contentious, Withdrawn, Standoffish, Distant, Vulnerable, Hesitant, Reserved, Pensive, Thoughtful, Accepting, Neutral, Grounded, Centered, Reflection, Open-minded, Receptive, Understanding, Patient, Tolerant, Tolerance, Balanced, Harmonious, Tranquil, Calm, Peaceful, Peace, Serene, Serenity, Present, Equanimous, Zen
     </p>
