--- a/index.html
+++ b/index.html
@@ -61,6 +61,37 @@
     .emotion-text {
       font-size: 1.5em;
       font-weight: 500;
+      margin-bottom: 12px;
+      display: block;
+    }
+
+    .color-bar {
+      height: 8px;
+      width: 100%;
+      border-radius: 4px;
+      margin-top: 8px;
+    }
+
+    .fear-trust {
+      background: linear-gradient(to right, #000000, #add8e6);
+    }
+
+    .anger-zen {
+      background: linear-gradient(to right, #ff0000, #ffffff);
+    }
+
+    .sad-happy {
+      background: linear-gradient(to right, #808080, #ffff00);
+    }
+
+    .bad-good {
+      background: linear-gradient(to right, #0000ff, #90ee90);
+    }
+
+    .hate-love {
+      background: linear-gradient(to right, #4b0082, #ffc0cb);
+    }
+</style>
     }
   </style>
 </head>
@@ -74,29 +105,33 @@
       <a href="FearTrust.html" class="emotion-pair">
         <div class="content">
           <span class="emotion-text">Fear &#x2194; Trust</span>
+          <div class="color-bar fear-trust"></div>
         </div>
       </a>
       <a href="AngerZen.html" class="emotion-pair">
         <div class="content">
           <span class="emotion-text">Anger &#x2194; Zen</span>
+          <div class="color-bar anger-zen"></div>
         </div>
       </a>
       <a href="SadHappy.html" class="emotion-pair">
         <div class="content">
           <span class="emotion-text">Sad &#x2194; Happy</span>
+          <div class="color-bar sad-happy"></div>
         </div>
       </a>
       <a href="BadGood.html" class="emotion-pair">
         <div class="content">
-          <span class="emotion-text">Good &#x2194; Bad</span>
+          <span class="emotion-text">Bad &#x2194; Good</span>
+          <div class="color-bar bad-good"></div>
         </div>
       </a>
       <a href="HateLove.html" class="emotion-pair">
         <div class="content">
           <span class="emotion-text">Hate &#x2194; Love</span>
+          <div class="color-bar hate-love"></div>
         </div>
       </a>
-    </div>
-  </main>
+    </div>  </main>
 </body>
 </html>
