--- a/FearTrust.html
+++ b/FearTrust.html
@@ -40,8 +40,24 @@ x
     </p>
     <h2>Understanding</h2>
     <p>
-x
-    <h2>Range of Emotions</h2>
+      If you're experiencing uneasiness, worry, or feeling vulnerable and unsafe, your emotions lie towards the Fear side of this range. Recognizing these emotions allows you to identify their source and take steps toward reassurance and security. When you feel calm, assured, and confident in your environment or relationships, you are experiencing emotions closer to Trust, indicating emotional stability and well-being.
+    <h2>Helping Others:</h2>
+<p>
+Offer reassurance and listen actively.
+
+Provide a safe and supportive environment.
+
+Encourage gentle exploration of fears.
+</p>
+<h2>Helping Myself:</h2>
+<p>
+Practice deep breathing and mindfulness techniques.
+
+Identify specific triggers to address them effectively.
+
+Seek support from trusted individuals.
+</p>
+      <h2>Range of Emotions</h2>
     <p>
         Terror, Panicked, Terrified, Dread, Frightened, Scared, Overwhelmed, Distressed, Fear, Worried, Tense, Uneasy, Unease, Nervous, Nervousness, Apprehensive, Apprehension, Anxious, Anxiety, Rejected, Jilted, Alienated, Inadequate, Inferior, Insecure, Unsure, Insignificant, Submissive, Passive, Inert, Caution, Neutral, Confidence, Calm, Assurance, Safety, Trust, Faith
     </p>
