--- a/FearTrust.html
+++ b/FearTrust.html
@@ -36,7 +36,7 @@
     <a href="index.html" class="back-link">&#8592; Back to Home</a>
     <h2>Description</h2>
     <p>
-x
+This emotional range encompasses feelings from intense anxiety, insecurity, and apprehension at one end, moving through states of cautiousness, neutrality, and calm, towards a profound sense of safety, confidence, and trust.
     </p>
     <h2>Understanding</h2>
     <p>
