--- a/FearTrust.html
+++ b/FearTrust.html
@@ -38,25 +38,27 @@
     <p>
 This emotional range encompasses feelings from intense anxiety, insecurity, and apprehension at one end, moving through states of cautiousness, neutrality, and calm, towards a profound sense of safety, confidence, and trust.
     </p>
-    <h2>Understanding</h2>
+    <h2>Description</h2>
     <p>
-      If you're experiencing uneasiness, worry, or feeling vulnerable and unsafe, your emotions lie towards the Fear side of this range. Recognizing these emotions allows you to identify their source and take steps toward reassurance and security. When you feel calm, assured, and confident in your environment or relationships, you are experiencing emotions closer to Trust, indicating emotional stability and well-being.
-    <h2>Helping Others:</h2>
-<p>
-Offer reassurance and listen actively.
+      This emotional spectrum encompasses states ranging from deep anxiety and insecurity to cautious neutrality, progressing towards serene confidence, security, and deep trust.
+    </p>
+    <h2>Understanding</h2>
+<p> 
+  When experiencing fear, you might feel vulnerable, unsettled, or unsafe. This emotional state highlights a core need for security and reassurance. Becoming aware of these feelings allows you to address their origins compassionately and gradually build toward emotional safety and trust.
 
-Provide a safe and supportive environment.
-
-Encourage gentle exploration of fears.
 </p>
-<h2>Helping Myself:</h2>
-<p>
-Practice deep breathing and mindfulness techniques.
-
-Identify specific triggers to address them effectively.
-
-Seek support from trusted individuals.
-</p>
+    <h2>Helping Others</h2>
+<ul>
+  <li>Offer empathy and non-judgmental listening.</li>
+  <li>Create environments of emotional safety and reassurance.</li>
+  <li>Gently encourage exploration and validation of their fears.</li>
+</ul>
+<h2>Helping Myself</h2>
+<ul>
+<li>Engage in mindful breathing to center emotions.</li>
+<li>Compassionately acknowledge and address your anxiety triggers.</li>
+  <li></li>Seek connection with supportive and understanding individuals.</li>
+></ul>
       <h2>Range of Emotions</h2>
     <p>
         Terror, Panicked, Terrified, Dread, Frightened, Scared, Overwhelmed, Distressed, Fear, Worried, Tense, Uneasy, Unease, Nervous, Nervousness, Apprehensive, Apprehension, Anxious, Anxiety, Rejected, Jilted, Alienated, Inadequate, Inferior, Insecure, Unsure, Insignificant, Submissive, Passive, Inert, Caution, Neutral, Confidence, Calm, Assurance, Safety, Trust, Faith
