--- a/AngerZen.html
+++ b/AngerZen.html
@@ -3,49 +3,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Anger - Zen</title>
+  <title>Anger - Satori (Zen)</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      background-color: #fff;
-    }
-    header {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    .content {
-      max-width: 800px;
-      margin: 0 auto;
-      text-align: left;
-      line-height: 1.6;
-    }
-    .back-link {
-      display: inline-block;
-      margin-bottom: 20px;
-      text-decoration: none;
-      color: #0066cc;
-    }
+    body { font-family: Arial, sans-serif; margin: 20px; background-color: #fff; }
+    header { text-align: center; margin-bottom: 20px; }
+    .content { max-width: 800px; margin: 0 auto; text-align: left; line-height: 1.6; }
+    .back-link { display: inline-block; margin-bottom: 20px; text-decoration: none; color: #0066cc; }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Anger - Zen</h1>
-  </header>
+  <header><h1>Anger vs Satori (Zen)</h1></header>
   <div class="content">
     <a href="index.html" class="back-link">&#8592; Back to Home</a>
     <h2>Description</h2>
-    <p>
-      This range spans from intense anger, rage, and frustration, passing through irritation and neutrality, progressing toward acceptance, tranquility, and ultimately achieving a state of inner peace and clarity (Satori or Zen).
-    </p>
+    <p>This emotional journey extends from intense frustration and anger, through irritation and neutral reflection, moving towards a deep acceptance, tranquility, and ultimately, a peaceful, mindful state of clarity (Satori or Zen).</p>
+
     <h2>Understanding</h2>
-    <p>
-      Feelings of resentment, agitation, or hostility place you towards the Anger end of this emotional range, signaling unmet needs or personal boundaries. Understanding these emotions helps you identify their triggers and work through them constructively. When your emotional state becomes reflective, accepting, and serene, you are approaching Satori, demonstrating emotional maturity and a balanced inner state.
-    </p>
+    <p>Feelings of anger indicate unmet expectations or violated boundaries. Understanding and acknowledging these emotions can guide you towards healthier expressions and proactive solutions, eventually fostering emotional maturity, acceptance, and peaceful clarity.</p>
+
+    <h2>Helping Others</h2>
+    <ul>
+      <li>Provide space and permission to safely express and articulate their anger.</li>
+      <li>Encourage reflection on underlying causes and personal boundaries.</li>
+      <li>Facilitate calm and respectful communication focused on resolution.</li>
+    </ul>
+
+    <h2>Helping Myself</h2>
+    <ul>
+      <li>Take mindful pauses to prevent reactionary behaviors.</li>
+      <li>Practice meditation or calming techniques to regain emotional balance.</li>
+      <li>Reflect thoughtfully to express your feelings constructively and assertively.</li>
+    </ul>
+
     <h2>Range of Emotions</h2>
-    <p>
-      Rage, Enraged, Fury, Furious, Infuriated, Livid, Incensed, Hateful, Hostility, Hostile, Aggressive, Violated, Threatened, Snapped, Provoked, Bitter, Resentful, Indignant, Offended, Devastated, Crushed, Hurt, Insulted, Slighted, Exposed, Embarrassed, Jealous, Mad, Anger, Frustrated, Frustration, Irritated, Irritation, Annoyed, Annoyance, Riled, Concerned, Suspicious, Skeptical, Critical, Sarcastic, Scolding, Contentious, Withdrawn, Standoffish, Distant, Vulnerable, Hesitant, Reserved, Pensive, Thoughtful, Accepting, Neutral, Grounded, Centered, Reflection, Open-minded, Receptive, Understanding, Patient, Tolerant, Tolerance, Balanced, Harmonious, Tranquil, Calm, Peaceful, Peace, Serene, Serenity, Present, Equanimous, Zen.
-    </p>
+    <p>Rage, Enraged, Furious, Infuriated, Livid, Hostility, Aggressive, Violated, Threatened, Irritated, Frustrated, Skeptical, Critical, Accepting, Neutral, Understanding, Patient, Calm, Peaceful, Serenity, Zen</p>
   </div>
 </body>
 </html>
