--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     }
     /* Main Container */
     main {
-      padding: 10px;
+      padding: 1px;
       max-width: 1200px;
       margin: 0 auto;
     }
@@ -132,6 +132,15 @@
           <div class="color-bar hate-love"></div>
         </div>
       </a>
-    </div>  </main>
+    </div>  
+    <h2>A Few Tips</h2>
+    <ul>
+      <li>Say <i>“I feel.....when you.....because.....”</i> and when someone says that to you, reply with <i>“What I heard you say is...”</i></li>
+      <li>What you/I feel is real.</li>
+      <li>Stop arguing and ask <i>“How you are feeling?”.</i></li>
+      <li>Don't blame.</li>
+      <li>Admit to being wrong.</li>
+    </ul>  
+  </main>
 </body>
 </html>
