--- a/BadGood.html
+++ b/BadGood.html
@@ -3,48 +3,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Fear - Trust</title>
+  <title>Bad - Good</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      background-color: #fff;
-    }
-    header {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    .content {
-      max-width: 800px;
-      margin: 0 auto;
-      text-align: left;
-      line-height: 1.6;
-    }
-    .back-link {
-      display: inline-block;
-      margin-bottom: 20px;
-      text-decoration: none;
-      color: #0066cc;
-    }
+    body { font-family: Arial, sans-serif; margin: 20px; background-color: #fff; }
+    header { text-align: center; margin-bottom: 20px; }
+    .content { max-width: 800px; margin: 0 auto; text-align: left; line-height: 1.6; }
+    .back-link { display: inline-block; margin-bottom: 20px; text-decoration: none; color: #0066cc; }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Bad - Good</h1>
-  </header>
+  <header><h1>Bad vs Good</h1></header>
   <div class="content">
     <a href="index.html" class="back-link">&#8592; Back to Home</a>
     <h2>Description</h2>
-    <p>
-      This range covers feelings from intense negativity, disgust, and dissatisfaction, through neutral states of tolerance and acceptance, moving towards optimism, satisfaction, appreciation, and an uplifting sense of gratitude.
-    </p>
+    <p>This emotional scale encompasses strong negativity, dissatisfaction, and pessimism, moving through neutral states of acceptance towards positivity, optimism, appreciation, and genuine gratitude.</p>
+
     <h2>Understanding</h2>
-    <p>
-      Emotions of aversion, dissatisfaction, or pessimism suggest you're towards the Bad end, prompting reflection on current circumstances or interactions that trigger negativity. Awareness of these feelings encourages positive change. If you feel hopeful, appreciative, and inspired, you're experiencing emotions closer to the Good end, revealing alignment with your values and positive outcomes.
-    </p>
+    <p>Negative emotions can reflect dissatisfaction or conflicts within your life circumstances. Recognizing and thoughtfully engaging with these emotions can catalyze positive changes, leading toward emotional growth, gratitude, and greater fulfillment.</p>
+
+    <h2>Helping Others</h2>
+    <ul>
+      <li>Empathetically acknowledge their emotional experiences without reinforcing negativity.</li>
+      <li>Gently encourage reflection to identify underlying triggers and patterns.</li>
+      <li>Support positive reframing and gratitude-building practices.</li>
+    </ul>
+
+    <h2>Helping Myself</h2>
+    <ul>
+      <li>Engage in regular gratitude reflections or journaling to enhance positivity.</li>
+      <li>Recognize and thoughtfully challenge recurring negative thought patterns.</li>
+      <li>Pursue activities and interactions that foster emotional upliftment and satisfaction.</li>
+    </ul>
+
     <h2>Range of Emotions</h2>
-        Loathing, Detestable, Abhorrent, Repugnant, Revolted, Revulsion, Disgust, Disgusted, Contempt, Judgmental, Awful, Disapproval, Disappointed, Disillusioned, Aversion, Avoidant, Hesitant, Hesitation, Timid, Doubt, Pessimism, Neutral, Tolerance, Open-minded, Acceptance, Hope, Encouraging, Optimism, Positivity, Relief, Satisfaction, Appreciation, Goodness, Gratitude, Fulfilled, Inspired, Uplifted.
-    </p>
+    <p>Loathing, Detestable, Abhorrent, Repugnant, Revolted, Revulsion, Disgust, Disgusted, Contempt, Judgmental, Awful, Disapproval, Disappointed, Disillusioned, Aversion, Avoidant, Hesitant, Hesitation, Timid, Doubt, Pessimism, Neutral, Tolerance, Open-minded, Acceptance, Hope, Encouraging, Optimism, Positivity, Relief, Satisfaction, Appreciation, Goodness, Gratitude, Fulfilled, Inspired, Uplifted</p>
   </div>
 </body>
 </html>
