added @media things to the style

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       padding: 20px;
       text-align: center;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      margin-bottom: 40px;
+      margin-bottom: 10px;
     }
     header h1 {
       margin: 0;
@@ -34,7 +34,7 @@
     }
     /* Main Container */
     main {
-      padding: 1px;
+      padding: 5px;
       max-width: 1200px;
       margin: 0 auto;
     }
@@ -91,7 +91,48 @@
     .hate-love {
       background: linear-gradient(to right, #4b0082, #ffc0cb);
     }
-</style>
+
+    /* Media Queries */
+    @media screen and (max-width: 768px) {
+      header {
+        padding: 15px;
+        margin-bottom: 5px;
+      }
+      
+      header h1 {
+        font-size: 2em;
+      }
+
+      main {
+        padding: 10px;
+      }
+
+      .emotion-text {
+        font-size: 1.3em;
+      }
+
+      .emotion-pairs {
+        gap: 15px;
+      }
+    }
+
+    @media screen and (max-width: 480px) {
+      header {
+        padding: 10px;
+        margin-bottom: 5px;
+      }
+
+      header h1 {
+        font-size: 1.8em;
+      }
+
+      .emotion-pair .content {
+        padding: 15px;
+      }
+
+      ul {
+        padding-left: 20px;
+      }
     }
   </style>
 </head>
