--- a/SadHappy.html
+++ b/SadHappy.html
@@ -5,10 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sad - Happy</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 20px; background-color: #fff; }
+    body { font-family: Arial, sans-serif; margin: 20px; background: linear-gradient(to bottom, #e0e0e0, #fffacd); }
     header { text-align: center; margin-bottom: 20px; }
     .content { max-width: 800px; margin: 0 auto; text-align: left; line-height: 1.6; }
     .back-link { display: inline-block; margin-bottom: 20px; text-decoration: none; color: #0066cc; }
+    ul { padding-left: 20px; }
+    h2 { border-bottom: 2px solid #f0c419; padding-bottom: 5px; }
+    p, ul { padding: 5px 0; }
+    body { background: linear-gradient(to bottom, #d3d3d3, #fff9c4); }
   </style>
 </head>
 <body>
@@ -23,20 +27,20 @@
 
     <h2>Helping Others</h2>
     <ul>
-      <li>Offer empathetic presence, active listening, and validation of their emotional pain.</li>
-      <li>Provide comfort without pressuring for immediate change.</li>
-      <li>Encourage engagement in meaningful, joy-bringing activities.</li>
+      <li>Offer empathetic presence, active listening, and validation of their emotional experiences.</li>
+      <li>Provide comfort without pressuring for immediate emotional resolution.</li>
+      <li>Encourage participation in meaningful, joyful activities that gently uplift mood.</li>
     </ul>
 
     <h2>Helping Myself</h2>
     <ul>
-      <li>Allow yourself to fully experience and validate sadness to promote emotional release.</li>
-      <li>Participate in nurturing and rewarding activities that foster emotional upliftment.</li>
-      <li>Reach out to supportive networks or professional assistance when emotional burden feels overwhelming.</li>
+      <li>Permit yourself to fully experience and validate sadness to foster emotional healing.</li>
+      <li>Engage regularly in activities that bring genuine joy and emotional nourishment.</li>
+      <li>Reach out proactively to supportive friends, family, or professionals during emotionally challenging times.</li>
     </ul>
 
     <h2>Range of Emotions</h2>
-    <p>Despair, Hopeless, Grief, Misery, Depressed, Sorrow, Heartbroken, Helpless, Guilty, Lonely, Disappointed, Regretful, Neutral, Hopeful, Content, Relieved, Satisfied, Grateful, Cheerful, Joyful, Excited, Thrilled, Elated, Blissful, Ecstatic, Radiant, Happiness</p>
+    <p>Despair, Hopeless, Grief, Misery, Depressed, Sorrow, Heartbroken, Helpless, Lonely, Disappointment, Regretful, Melancholy, Bored, Indifferent, Neutral, Hopeful, Content, Relieved, Satisfied, Grateful, Cheerful, Joyful, Excited, Thrilled, Elated, Blissful, Ecstatic, Radiant, Happiness</p>
   </div>
 </body>
 </html>
